--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 
 body {
   height: 100vh;
-  background-color: #fff;
 }
 
 nav {
@@ -25,7 +24,6 @@ nav ul {
   list-style: none;
   overflow: hidden;
   color: #fff;
-  padding: 0;
   text-align: right;
   margin: 0;
   padding-right: 40px;
@@ -33,12 +31,12 @@ nav ul {
 }
 
 nav.color ul {
-  opacity: 1;
+  background-color: #31859bff;
 }
 
 nav ul li {
   display: inline-block;
-  padding: 1px 40px;;
+  padding: 1px 40px;
 }
 
 .menu li a {
@@ -50,14 +48,15 @@ nav ul li {
 
 .menu li a:link,
 .menu li a:visited {
-  -webkit-transition: background-color rgb(207, 204, 204) 0.8s;
-  -webkit-transition: background-color rgb(207, 204, 204) 1s;
-  transition: background-color rgb(207, 204, 204) 4s;
+  padding-bottom: 1px;
+  text-decoration: none;
 }
 
 .menu li a:hover,
 .menu li a:active {
-  background-color: #444;
+  color: black;
+  border-bottom: 2px solid black;
+  
 }
 
 a:link,
@@ -65,6 +64,8 @@ a:visited {
   color: #9f9f9f;
   -webkit-transition: background-color rgb(207, 204, 204) 0.2s, color 0.2s;
   transition: background-color rgb(207, 204, 204) 4.2s, color 0.2s;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s, color 0.2s;
 }
 
 .menu-icon {
@@ -92,24 +93,33 @@ a:visited {
   position: absolute;
   top: 5px;
   left: 35px;
-} 
+}
 
-/* .banner {
-  height: 677px;
-  background: url(img/backwaik.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 800px;
-} */
-
-.banner{
-  background: #31859bff;  
-  background: -webkit-linear-gradient(to left, #31859bff, #31859bff);  
+.banner {
+  background: #31859bff;
+  background: -webkit-linear-gradient(to left, #31859bff, #31859bff);
   width: 100%;
   height: 100vh;
 }
 
-.circles{
+.hero-text{
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  z-index: 98;
+  height: 100px;
+  width: 600px;
+  position: absolute;
+  top: 40%;
+  left: 10%;
+  font-size: 24px;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  line-height: 60px;
+  color: #fff;
+}
+
+.circles {
   position: absolute;
   top: 0;
   left: 0;
@@ -118,7 +128,7 @@ a:visited {
   overflow: hidden;
 }
 
-.circles li{
+.circles li {
   position: absolute;
   display: block;
   list-style: none;
@@ -127,10 +137,10 @@ a:visited {
   background: rgba(255, 255, 255, 0.2);
   animation: animate 25s linear infinite;
   bottom: -150px;
-  
+
 }
 
-.circles li:nth-child(1){
+.circles li:nth-child(1) {
   left: 25%;
   width: 80px;
   height: 80px;
@@ -138,7 +148,7 @@ a:visited {
 }
 
 
-.circles li:nth-child(2){
+.circles li:nth-child(2) {
   left: 10%;
   width: 20px;
   height: 20px;
@@ -146,14 +156,14 @@ a:visited {
   animation-duration: 12s;
 }
 
-.circles li:nth-child(3){
+.circles li:nth-child(3) {
   left: 70%;
   width: 20px;
   height: 20px;
   animation-delay: 4s;
 }
 
-.circles li:nth-child(4){
+.circles li:nth-child(4) {
   left: 40%;
   width: 60px;
   height: 60px;
@@ -161,28 +171,28 @@ a:visited {
   animation-duration: 18s;
 }
 
-.circles li:nth-child(5){
+.circles li:nth-child(5) {
   left: 65%;
   width: 20px;
   height: 20px;
   animation-delay: 0s;
 }
 
-.circles li:nth-child(6){
+.circles li:nth-child(6) {
   left: 75%;
   width: 110px;
   height: 110px;
   animation-delay: 3s;
 }
 
-.circles li:nth-child(7){
+.circles li:nth-child(7) {
   left: 35%;
   width: 150px;
   height: 150px;
   animation-delay: 7s;
 }
 
-.circles li:nth-child(8){
+.circles li:nth-child(8) {
   left: 50%;
   width: 25px;
   height: 25px;
@@ -190,7 +200,7 @@ a:visited {
   animation-duration: 45s;
 }
 
-.circles li:nth-child(9){
+.circles li:nth-child(9) {
   left: 20%;
   width: 15px;
   height: 15px;
@@ -198,7 +208,7 @@ a:visited {
   animation-duration: 35s;
 }
 
-.circles li:nth-child(10){
+.circles li:nth-child(10) {
   left: 85%;
   width: 150px;
   height: 150px;
@@ -210,16 +220,16 @@ a:visited {
 
 @keyframes animate {
 
-  0%{
-      transform: translateY(0) rotate(0deg);
-      opacity: 1;
-      border-radius: 0;
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
   }
 
-  100%{
-      transform: translateY(-1000px) rotate(720deg);
-      opacity: 0;
-      border-radius: 50%;
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
   }
 
 }
@@ -235,7 +245,7 @@ a:visited {
   margin: auto;
 }
 
-.content {
+.about-content {
   display: flex;
   flex-direction: column;
   float: right;
@@ -244,7 +254,7 @@ a:visited {
   margin-top: 35px;
 }
 
-.content h1 {
+.about-content h1 {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   padding: 5px;
@@ -264,7 +274,7 @@ a:visited {
   border-bottom: 7px solid #31859bff;
 }
 
-.content p {
+.about-content p {
   width: 800px;
   padding: 5px 20px;
   margin-top: 10px;
@@ -321,6 +331,7 @@ a:visited {
   transition-duration: 0.3s;
   transition-property: box-shadow, transform;
 }
+
 .logo-animated:hover,
 .logo-animated:focus,
 .logo-animated:active {
@@ -799,7 +810,8 @@ a:visited {
   left: 10px;
   height: 40px;
 }
-.box-location p{
+
+.box-location p {
   width: 160px;
 }
 
@@ -819,6 +831,7 @@ footer {
 footer p {
   color: #fff;
 }
+
 /* TEST */
 
 #btn-top {
@@ -839,16 +852,30 @@ footer p {
 }
 
 @media(max-width: 992px) {
-  .container { padding: 20px 100px; }
-  #btn-top { font-size: 22px; width: 40px; height: 40px; bottom: 15px; right: 15px; }
+
+
+  #btn-top {
+    font-size: 22px;
+    width: 40px;
+    height: 40px;
+    bottom: 15px;
+    right: 15px;
+  }
 }
+
 @media(max-width:768px) {
-  body { font-size: 16px; }
-  .container { padding: 10px 50px; }
-  h1 { font-size: 26px; }
-  h2 { font-size: 22px; }
-  hr { margin: 30px 0; }
-  #btn-top { font-size: 18px; width: 32px; height: 32px; bottom: 6px; right: 6px; }
+
+  .container {
+    padding: 10px 50px;
+  }
+
+  #btn-top {
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    bottom: 6px;
+    right: 6px;
+  }
 }
 
 /* Animations */
@@ -857,6 +884,7 @@ footer p {
   animation-fill-mode: both;
   animation-name: btnEntrance;
 }
+
 /* zoomIn */
 /* @keyframes btnEntrance { 
   from {
@@ -874,6 +902,7 @@ footer p {
     opacity: 0;
     transform: translate3d(0, 100%, 0);
   }
+
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
@@ -882,9 +911,10 @@ footer p {
 
 .btnExit {
   animation-duration: 0.25s;
-  animation-fill-mode: both;  
+  animation-fill-mode: both;
   animation-name: btnExit;
 }
+
 /* zoomOut */
 /* @keyframes btnExit {
   from {
@@ -901,49 +931,62 @@ footer p {
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
     transform: translate3d(0, 100%, 0);
   }
 }
 
-@media(max-width: 786px) {
-
+/* Tablet Styles */
+@media only screen and (max-width: 960px) {
   .logo {
-        position: fixed;
-        top: 0;
-        margin-top: 16px;
-  }
-  nav{
-    max-width: 56.7%;
-  }
-  nav ul {
-        max-height: 0px;
-        background: #fff;
+    position: fixed;
+    top: 0;
+    width: 30px;
+    margin-top: 20px;
   }
 
-  nav.black ul {
+  nav {
+    max-width: 25%;
+    background: green;
+  }
+
+  nav ul {
+    max-height: 0px;
     background: #fff;
   }
 
+  /* nav.black ul {
+    background-color: red;
+  } */
+
   .showing {
-        max-height: 34em;
+    max-height: 34em;
   }
 
   nav ul li {
-        box-sizing: border-box;
-        width: 100%;
-        padding: 24px;
-        text-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 24px;
+    text-align: center;
   }
 
   .menu-icon {
-        display: block;
+    display: block;
   }
   .banner{
-    width: 726px;
-    background-size: cover;
-    background-color: red;
+    max-width: 49.61%;
+    width: 121.9%;
   }
 
+  .about{
+    max-width: 121.9%;
+    background-color: red;
+  }
+  .content{
+
+  }
 }
+
+/*@media(max-width: 786px) */
