--- a/style.css
+++ b/style.css
@@ -11,8 +11,19 @@ body {
   height: 100vh;
 }
 
+.logo {
+  position: fixed;
+  margin: 16px 46px;
+}
+
+.logo img {
+  position: absolute;
+  top: -10px;
+  left: 45px;
+  width: 80px;
+}
+
 nav {
-  font-family: 'Lato', sans-serif;
   position: fixed;
   width: 100%;
   line-height: 60px;
@@ -22,29 +33,34 @@ nav {
 nav ul {
   line-height: 60px;
   list-style: none;
-  overflow: hidden;
-  color: #fff;
   text-align: right;
-  margin: 0;
+  overflow: hidden;
   padding-right: 40px;
+  padding: 0;
+  margin: 0;
   transition: 1s;
+  color: #fff;
+  background: transparent;
 }
 
 nav.color ul {
-  background-color: #31859bff;
+  background: #31859bff;
 }
 
 nav ul li {
   display: inline-block;
-  padding: 15px 40px;
+  padding: 16px 40px;
+}
+
+nav ul li a {
+  font-family: 'Lato', sans-serif;
+  text-decoration: none;
+  font-size: 25px;
+  position: relative;
 }
 
 .menu li a {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 25px;
-  color: black;
-  position: relative;
+  color: #000;
 }
 
 .menu li a:link,
@@ -53,11 +69,11 @@ nav ul li {
   text-decoration: none;
 }
 
-.menu li a::after{
+.menu li a::after {
   content: "";
   position: absolute;
   left: 50%;
-  bottom: -3px;
+  bottom: -5px;
   width: 60%;
   height: 1.5px;
   opacity: 0;
@@ -71,11 +87,9 @@ nav ul li {
   opacity: 1;
 }
 
-.borderCenter {
+.border {
   position: relative;
 }
-
-
 
 a:link,
 a:visited {
@@ -89,30 +103,15 @@ a:visited {
 .menu-icon {
   line-height: 60px;
   width: 100%;
-  background: #fff;
+  background: #31859bff;
   text-align: right;
   box-sizing: border-box;
   padding: 15px 24px;
   cursor: pointer;
-  color: #444;
+  color: #fff;
   display: none;
 }
 
-.logo {
-  position: fixed;
-  font-weight: bold;
-  font-size: 20px;
-  letter-spacing: 2px;
-  position: relative;
-  width: 50px;
-}
-
-.logo img {
-  position: absolute;
-  top: 5px;
-  left: 45px;
-  width: 80px;
-}
 
 .banner {
   background: #31859bff;
@@ -145,11 +144,12 @@ a:visited {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 65px;
-  
+
   line-height: 80px;
   color: #fff;
 }
-.hero-text img{
+
+.hero-text img {
   width: 50px;
 }
 
@@ -268,7 +268,7 @@ a:visited {
 
 }
 
-.index img{
+.index img {
   width: 40px;
 }
 
@@ -875,41 +875,38 @@ footer p {
             *** ANIMATES ***
 **********************************************/
 
-.viber{
+.viber {
   color: #474E51;
 }
 
-.viber:hover
-{
+.viber:hover {
   animation: viber 1s ease;
   animation-iteration-count: 1;
 }
 
-@keyframes viber
-{
-  15%
-  {
-      transform: translateX(5px);
+@keyframes viber {
+  15% {
+    transform: translateX(5px);
   }
-  30%
-  {
-      transform: translateX(-5px);
+
+  30% {
+    transform: translateX(-5px);
   }
-  50%
-  {
-      transform: translateX(3px);
+
+  50% {
+    transform: translateX(3px);
   }
-  65%
-  {
-      transform: translateX(-3px);
+
+  65% {
+    transform: translateX(-3px);
   }
-  80%
-  {
-      transform: translateX(2px);
+
+  80% {
+    transform: translateX(2px);
   }
-  100%
-  {
-      transform: translateX(0);
+
+  100% {
+    transform: translateX(0);
   }
 }
 
@@ -951,3 +948,172 @@ footer p {
   }
 }
 
+@media(max-width: 786px) {
+  .home{
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
+  nav {
+    display: flex;
+    max-width: 25%;
+    max-height: 50%;
+    background: #31859bff;
+    position: fixed;
+  }
+
+  nav ul {
+    max-height: 0px;
+     background: #31859bff; 
+     
+  }
+
+  nav.color ul { background: #31859bff; 
+  }
+
+  .showing {
+    max-height: 34em;
+  }
+
+  nav ul li {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0px;
+    text-align: center;
+    
+  }
+
+  .logo {
+    position: fixed;
+    height: 55px;
+    width: 55px;
+    top: 0;
+    right: 210px;
+    background: red;
+    z-index: 99;
+  }
+  .logo img {
+    position: absolute;
+    top: -5px;
+    left: -10px;
+  }
+  .menu-icon {
+    display: flex;
+    color: black;
+    position: fixed;
+    background: yellow;
+    width: 55px;
+    height: 55px;
+    top: 15px;
+    right: 10px;
+    justify-content: center;
+    
+  }
+  .hero-text{
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    flex-wrap: wrap-reverse;
+    text-align: center;
+  }
+  .hero-text h1{
+    font-size: 3.5em;
+    margin: auto;
+  }
+  .hero-text h2{
+    font-size: 2em;
+    width: 70%;
+    margin: auto;
+    line-height: 1.4em;
+  }
+  .hero-text img{
+    width: 0.8em;
+  }
+
+  .about{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 100%;
+    max-height: 100%;
+    background: red;
+  }
+  .about-content{
+    margin: auto;
+    max-width: 100%;
+    
+  }
+  .about-content h1{
+    font-size: 2.1em;
+    width: 75%;
+    background: cyan;
+  }
+  .about-content p{
+    font-size: 0.5em;
+    width: 100%;
+    margin: auto;
+    background: orange;
+  }
+  .box-social{
+    width: 100%;
+  }
+  .btn-about{
+    text-align: center;
+    padding: auto;
+    margin-top: 40px;
+  }
+  .about-illustration{
+    display: none;
+  }
+  /* Skill */
+  .skill{
+    flex-wrap: wrap;
+    max-width: 100%;
+    max-height: 100%;
+    background: rgb(169, 212, 194);
+  }
+  .content-skill{
+    max-width: 100%;
+    max-height: 100%;
+    flex-wrap: wrap;
+    background: rgb(118, 108, 216);
+  }
+  .box-skill{
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    max-height: 100%;
+    background: orange;
+  }
+  .row{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 80%;
+    margin: auto;
+     background: yellow;
+  }
+  .skill-front{
+    max-width: 0%;
+    margin: auto;
+    font-size: 0.5em;
+  }
+  .skill-front h3, skill-back h3{
+    font-size: 3em;
+  }
+
+
+  .skill-illustration{
+    display: none;
+  }
+
+
+  /* Project */
+  .illustration-project{
+    display: none;
+  }
+
+
+}
