--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 
 .logo {
   position: fixed;
+  z-index: 100;
   margin: 16px 46px;
 }
 
@@ -1042,7 +1043,6 @@ footer p {
   }
 
   .logo {
-    position: fixed;
     height: 55px;
     width: 55px;
     top: 15px;
