--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a:visited {
   align-items: flex-start;
   flex-direction: column;
   z-index: 98;
-  width: 895px;
+  max-width: 51%;
   position: absolute;
   top: 40%;
   left: 10%;
@@ -272,17 +272,21 @@ a:visited {
 
 .about {
   width: 100%;
-  max-width: 1522px;
+  max-width: 100%;
   height: 790px;
   margin: auto;
+  flex-wrap: wrap;
+  
 }
 
 .about-content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   float: right;
   height: 720px;
-  width: 800px;
+  max-width: 55%;
   margin-top: 35px;
 }
 
@@ -290,9 +294,8 @@ a:visited {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   padding: 5px;
-  margin-top: 60px;
-  margin-left: 50px;
-  width: 700px;
+  margin: 60px auto 0;
+  max-width: 77%;
   text-align: center;
   font-size: 40px;
   color: #191c1f;
@@ -307,9 +310,9 @@ a:visited {
 }
 
 .about-content p {
-  width: 800px;
+  max-width: 90%;
   padding: 5px 20px;
-  margin-top: 20px;
+  margin: 20px auto;
   font-family: 'Lato', sans-serif;
   font-size: 22px;
   line-height: 1.5;
@@ -328,7 +331,7 @@ a:visited {
 .box-social {
   display: flex;
   justify-content: center;
-  width: 800px;
+  max-width: 50%;
   margin-top: 10px;
 }
 
@@ -375,7 +378,7 @@ a:visited {
 }
 
 .about-illustration img {
-  width: 550px;
+  max-width: 40%;
   position: absolute;
   top: 200px;
   left: 25px;
@@ -410,7 +413,7 @@ a:visited {
 
 .skill {
   height: 760px;
-  width: 1522px;
+  max-width: 100%;
   margin: auto;
   background-color: #ffe4e1;
 }
@@ -420,7 +423,7 @@ a:visited {
   flex-direction: column;
   float: left;
   height: 720px;
-  width: 800px;
+  max-width: 100%;
   margin-top: 15px;
 }
 
@@ -519,9 +522,10 @@ a:visited {
 }
 
 .skill-illustration img {
-  width: 600px;
+  max-width: 650px;
   position: absolute;
-  top: 155px;
+  top: 200px;
+  left: 800px;
 }
 
 /**********************************************
@@ -530,14 +534,14 @@ a:visited {
 
 .project {
   height: 752px;
-  width: 1522px;
+  max-width: 100%;
   margin: auto;
   padding-top: 30px;
 }
 
 .project-box {
-  height: 700px;
-  width: 1300px;
+  max-height: 700px;
+  max-width: 89%;
   margin: auto;
 }
 
@@ -546,9 +550,9 @@ a:visited {
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
-  width: 100%;
-  max-width: 1295px;
-  margin: 160px auto;
+  max-width: 94.5%;
+  max-height: 95%;
+  margin: 250px auto;
 }
 
 .project-content {
@@ -556,9 +560,8 @@ a:visited {
   flex-direction: column;
   align-content: space-between;
   float: left;
-  height: 290px;
-  width: 935px;
-  margin-top: 0px;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .project-content h3,
@@ -570,16 +573,15 @@ a:visited {
 .project-content h3 {
   font-size: 30px;
   font-weight: 400;
-  width: 275px;
+  max-width: 28%;
   margin-left: 50px;
   color: #191c1f;
 }
 
 .project-content .desc {
   font-size: 20px;
-  width: 875px;
-  margin-top: 20px;
-  margin-left: 50px;
+  max-width: 100%;
+  margin: 20px 0 0 50px;
 }
 
 .box-stack {
@@ -587,9 +589,8 @@ a:visited {
   flex-direction: row;
   justify-content: start;
   height: 60px;
-  width: 875px;
-  margin-left: 50px;
-  margin-top: 17px;
+  max-width: 100%;
+  margin: 17px 0 0 50px;
   padding: 10px 0;
 }
 
@@ -608,9 +609,8 @@ a:visited {
   display: flex;
   align-items: center;
   height: 60px;
-  width: 875px;
-  margin-top: 20px;
-  margin-left: 50px;
+  max-width: 100%;
+  margin: 20px 0 0 50px;
 }
 
 .box-link img {
@@ -653,12 +653,14 @@ a:visited {
 
 .project-illustration {
   height: 290px;
-  width: 360px;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
 
 .project-illustration img {
-  height: 290px;
-  width: 360px;
+
+  max-width: 140%;
+  background :red;
 }
 
 /**********************************************
@@ -745,15 +747,16 @@ a:visited {
   flex-direction: column;
   justify-content: space-evenly;
   height: 240px;
-  width: 300px;
+  max-width: 20%;
   margin: 100px auto;
 }
 
 .contact-coordinates {
   height: 50px;
-  width: 300px;
+  max-width: 60%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .contact-coordinates h3 {
@@ -1046,7 +1049,7 @@ footer p {
     height: 55px;
     width: 55px;
     top: 15px;
-    right: 20px;
+    right: -20px;
   }
   .logo img {
     position: absolute;
