--- a/style.css
+++ b/style.css
@@ -738,7 +738,7 @@ a:visited {
 .contact-box {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  margin-top: 50px;
   height: 240px;
   width: 300px;
 }
