--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
-
+html {
+  font-size: 62.5%;
+}
 body {
   height: 100vh;
 }
@@ -14,14 +16,14 @@ body {
 .logo {
   position: fixed;
   z-index: 100;
-  margin: 16px 46px;
+  margin: 1.6rem 4.6rem;
 }
 
 .logo img {
   position: absolute;
-  top: -10px;
-  left: 45px;
-  width: 80px;
+  top: -1rem;
+  left: 4.5rem;
+  width: 8rem;
 }
 
 .checked {
@@ -31,16 +33,16 @@ body {
 nav {
   position: fixed;
   width: 100%;
-  line-height: 60px;
+  line-height: 6rem;
   z-index: 99;
 }
 
 nav ul {
-  line-height: 60px;
+  line-height: 6rem;
   list-style: none;
   text-align: right;
   overflow: hidden;
-  padding-right: 40px;
+  padding-right: 4rem;
   padding: 0;
   margin: 0;
   transition: 1s;
@@ -54,13 +56,13 @@ nav.color ul {
 
 nav ul li {
   display: inline-block;
-  padding: 16px 40px;
+  padding: 1.6rem 4rem;
 }
 
 nav ul li a {
   font-family: 'Lato', sans-serif;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 2.5rem;
   position: relative;
 }
 
@@ -70,7 +72,7 @@ nav ul li a {
 
 #menu li a:link,
 #menu li a:visited {
-  padding-bottom: 1px;
+  padding-bottom: 0.5rem;
   text-decoration: none;
 }
 
@@ -126,23 +128,23 @@ a:visited {
 .hero-text h1 {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  font-size: 65px;
+  font-size: 6.5rem;
   text-align: center;
-  line-height: 80px;
+  line-height: 8rem;
   color: #fff;
 }
 
 .hero-text h2 {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  font-size: 65px;
+  font-size: 6.5rem;
 
-  line-height: 80px;
+  line-height: 8rem;
   color: #fff;
 }
 
 .hero-text img {
-  width: 50px;
+  width: 5rem;
 }
 
 .circles {
@@ -158,8 +160,8 @@ a:visited {
   position: absolute;
   display: block;
   list-style: none;
-  width: 20px;
-  height: 20px;
+  width: 2rem;
+  height: 2rem;
   background: rgba(255, 255, 255, 0.2);
   animation: animate 25s linear infinite;
   bottom: -150px;
@@ -168,81 +170,98 @@ a:visited {
 
 .circles li:nth-child(1) {
   left: 25%;
-  width: 80px;
-  height: 80px;
+  width: 8rem;
+  height: 8rem;
   animation-delay: 0s;
 }
 
 
 .circles li:nth-child(2) {
   left: 10%;
-  width: 20px;
-  height: 20px;
+  width: 2rem;
+  height: 2rem;
   animation-delay: 2s;
   animation-duration: 12s;
 }
 
 .circles li:nth-child(3) {
   left: 70%;
-  width: 20px;
-  height: 20px;
+  width: 2rem;
+  height: 2rem;
   animation-delay: 4s;
 }
 
 .circles li:nth-child(4) {
   left: 40%;
-  width: 60px;
-  height: 60px;
+  width: 6rem;
+  height: 6rem;
   animation-delay: 0s;
   animation-duration: 18s;
 }
 
 .circles li:nth-child(5) {
   left: 65%;
-  width: 20px;
-  height: 20px;
+  width: 2rem;
+  height: 2rem;
   animation-delay: 0s;
 }
 
 .circles li:nth-child(6) {
   left: 75%;
-  width: 110px;
-  height: 110px;
+  width: 10rem;
+  height: 10rem;
   animation-delay: 3s;
 }
 
 .circles li:nth-child(7) {
-  left: 35%;
-  width: 150px;
-  height: 150px;
-  animation-delay: 7s;
+  left: 63%;
+  width: 9rem;
+  height: 9rem;
+  animation-delay: 0s;
 }
 
 .circles li:nth-child(8) {
   left: 50%;
-  width: 25px;
-  height: 25px;
+  width: 2.5rem;
+  height: 2.5rem;
   animation-delay: 15s;
   animation-duration: 45s;
 }
 
 .circles li:nth-child(9) {
   left: 20%;
-  width: 15px;
-  height: 15px;
+  width: 1.5rem;
+  height: 1.5rem;;
   animation-delay: 2s;
   animation-duration: 35s;
 }
 
 .circles li:nth-child(10) {
   left: 85%;
-  width: 150px;
-  height: 150px;
+  width: 6rem;
+  height: 6rem;
   animation-delay: 0s;
   animation-duration: 11s;
 }
+.circles li:nth-child(11) {
+  left: 70%;
+  width: 2rem;
+  height: 2rem;
+  animation-delay: 4s;
+}
+.circles li:nth-child(12) {
+  left: 35%;
+  width: 4rem;
+  height: 4rem;
+  animation-delay: 7s;
+}
+.circles li:nth-child(13) {
+  left: 30%;
+  width: 2rem;
+  height: 2rem;
+  animation-delay: 4s;
 
-
+}
 
 @keyframes animate {
 
@@ -255,17 +274,10 @@ a:visited {
   100% {
     transform: translateY(-1000px) rotate(720deg);
     opacity: 0;
-    border-radius: 50%;
+    border-radius: 100%;
   }
 
 }
-
-.index img {
-  width: 40px;
-}
-
-
-
 /**********************************************
             *** ABOUT ***
 **********************************************/
@@ -273,10 +285,9 @@ a:visited {
 .about {
   width: 100%;
   max-width: 100%;
-  height: 790px;
+  height: 79rem;
   margin: auto;
   flex-wrap: wrap;
-  
 }
 
 .about-content {
@@ -285,19 +296,19 @@ a:visited {
   justify-content: center;
   align-items: center;
   float: right;
-  height: 720px;
+  height: 72rem;
   max-width: 55%;
-  margin-top: 35px;
+  margin-top: 3.5rem;
 }
 
 .about-content h1 {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  padding: 5px;
-  margin: 60px auto 0;
+  padding: 0.5rem;
+  margin: 6rem auto 0;
   max-width: 77%;
   text-align: center;
-  font-size: 40px;
+  font-size: 4rem;
   color: #191c1f;
 }
 
@@ -306,33 +317,33 @@ a:visited {
 }
 
 .border-row {
-  border-bottom: 7px solid #31859bff;
+  border-bottom: 0.7rem solid #31859bff;
 }
 
 .about-content p {
   max-width: 90%;
-  padding: 5px 20px;
-  margin: 20px auto;
+  padding: 0.5rem 2rem;
+  margin: 1rem auto;
   font-family: 'Lato', sans-serif;
-  font-size: 22px;
-  line-height: 1.5;
+  font-size: 2.2rem;
+  line-height: 3.5rem;
   text-align: center;
   font-weight: 400;
   color: #191c1f;
-
 }
 
 .highlith {
   border-radius: 5px;
-  padding: 2px 3px;
+  padding: 0.1rem 0.3rem;
   background-color: #b9e4fd;
+  
 }
 
 .box-social {
   display: flex;
   justify-content: center;
   max-width: 50%;
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 
 .box social a {
@@ -341,8 +352,8 @@ a:visited {
 }
 
 .box-social img {
-  width: 50px;
-  margin: 0 25px;
+  width: 5rem;
+  margin: 0 2.5rem;
 }
 
 .box-social span {
@@ -352,9 +363,17 @@ a:visited {
   position: relative;
 }
 
-.logo-linkedin {
+.desc-linkedin {
   position: absolute;
-  bottom: 5px;
+  bottom: 0.2rem;
+  left: 0.25rem;
+  font-size: 1.5rem;
+}
+.desc-github {
+  position: absolute;
+  bottom: -0.2rem;
+  left: 0.25rem;
+  font-size: 1.5rem;
 }
 
 .logo-animated {
@@ -362,7 +381,7 @@ a:visited {
   vertical-align: middle;
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px transparent;
-  margin: 10px;
+  margin: 1rem;
   transition-duration: 0.3s;
   transition-property: box-shadow, transform;
 }
@@ -380,25 +399,25 @@ a:visited {
 .about-illustration img {
   max-width: 40%;
   position: absolute;
-  top: 200px;
-  left: 25px;
+  top: 20rem;
+  left: 2.5rem;
 }
 
 .about-btn {
   display: flex;
   justify-content: center;
-  margin-top: 5px;
+  margin-top: 0.5rem;
 }
 
 .about-btn a {
   font-family: 'Lato', sans-serif;
-  border-radius: 25px;
+  border-radius: 2.5rem;
   border: none;
   text-decoration: none;
-  padding: 15px;
-  margin: 20px;
-  text-transform: capitalize;
+  padding: 2rem;
+  margin: 2rem;
   color: #fff;
+  font-size: 1.65rem;
   background-color: #31859bff;
 }
 
@@ -412,7 +431,7 @@ a:visited {
 **********************************************/
 
 .skill {
-  height: 760px;
+  height: 76rem;
   max-width: 100%;
   margin: auto;
   background-color: #ffe4e1;
@@ -422,9 +441,9 @@ a:visited {
   display: flex;
   flex-direction: column;
   float: left;
-  height: 720px;
+  height: 72rem;
   max-width: 100%;
-  margin-top: 15px;
+  margin-top: 1.5rem;
 }
 
 
@@ -432,21 +451,21 @@ a:visited {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 105px 50px;
+  margin: 10.5rem 5rem;
 }
 
 .skill-box h3 {
-  font-size: 30px;
+  font-size: 3rem;
   color: #191c1f;
   font-family: "Open Sans", sans-serif;
-  padding-bottom: 5px;
+  padding-bottom: 0.5rem;
 }
 
 .skill-box p {
   display: flex;
   justify-content: center;
   font-family: 'Lato', sans-serif;
-  font-size: 20px;
+  font-size: 2rem;
   color: #191c1f;
 }
 
@@ -458,30 +477,30 @@ a:visited {
   display: flex;
   flex-direction: column;
   margin: auto;
-  height: 290px;
-  padding: 0 50px;
+  height: 29rem;
+  padding: 0 5rem;
 }
 
 .skill-front img {
   display: flex;
   margin: auto;
-  padding-top: 7px;
-  width: 50px;
+  padding-top: 0.7rem;
+  width: 5rem;
 }
 
 .skill-back {
   display: flex;
   flex-direction: column;
   margin: auto;
-  height: 290px;
-  padding: 0 50px;
+  height: 29rem;
+  padding: 0 5rem;
 }
 
 .skill-back img {
   display: flex;
   margin: auto;
-  padding-top: 7px;
-  width: 50px;
+  padding-top: 0.7rem;
+  width: 5rem;
 }
 
 .row2 {
@@ -492,40 +511,40 @@ a:visited {
 
 .skill-framework {
   align-items: center;
-  height: 290px;
-  padding: 0 39px;
+  height: 29rem;
+  padding: 0 3.9rem;
 }
 
 .skill-framework img {
   display: flex;
   margin: auto;
-  padding-top: 7px;
-  width: 50px;
+  padding-top: 0.7rem;
+  width: 5rem;
 }
 
 .skill-tool {
   align-items: center;
-  height: 290px;
-  padding: 0 72.5px;
+  height: 29rem;
+  padding: 0 7.25rem;
 }
 
 .skill-tool img {
   display: flex;
   margin: auto;
-  padding-top: 7px;
-  width: 50px;
+  padding-top: 0.7rem;
+  width: 5rem;
 }
 
 .skill-illustration {
   position: relative;
-  width: 150px;
+  width: 15rem;
 }
 
 .skill-illustration img {
-  max-width: 650px;
+  max-width: 65rem;
   position: absolute;
-  top: 200px;
-  left: 800px;
+  top: 20rem;
+  left: 80rem;
 }
 
 /**********************************************
@@ -533,14 +552,14 @@ a:visited {
 **********************************************/
 
 .project {
-  height: 752px;
+  height: 75.2rem;
   max-width: 100%;
   margin: auto;
-  padding-top: 30px;
+  padding-top: 3rem;
 }
 
 .project-box {
-  max-height: 700px;
+  max-height: 70rem;
   max-width: 89%;
   margin: auto;
 }
@@ -552,7 +571,7 @@ a:visited {
   flex-direction: row-reverse;
   max-width: 94.5%;
   max-height: 95%;
-  margin: 250px auto;
+  margin: 25rem auto;
 }
 
 .project-content {
@@ -571,75 +590,78 @@ a:visited {
 }
 
 .project-content h3 {
-  font-size: 30px;
+  font-size: 3rem;
   font-weight: 400;
   max-width: 230%;
-  margin-left: 50px;
+  margin-left: 5rem;
   color: #191c1f;
 }
 
 .project-content .desc {
-  font-size: 20px;
+  font-size: 2rem;
   max-width: 100%;
-  margin: 20px 0 0 50px;
+  margin: 2rem 0 0 5rem;
 }
 
 .box-stack {
   display: flex;
   flex-direction: row;
   justify-content: start;
-  height: 60px;
+  height: 6rem;
   max-width: 100%;
-  margin: 17px 0 0 50px;
-  padding: 10px 0;
+  margin: 1.7rem 0 0 5rem;
+  padding: 1rem 0;
+
 }
 
 .box-stack p {
-  padding: 5px 10px;
-  margin: 5px;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  font-size: 1.7rem;
 }
 
 .highlith-stack {
-  border-radius: 5px;
-  padding: 2px 3px;
+  border-radius: 0.5rem;
+  padding: 0.2rem 0.3rem;
   background-color: #b9e4fd;
 }
 
 .box-link {
   display: flex;
   align-items: center;
-  height: 60px;
+  height: 6rem;
   max-width: 100%;
-  margin: 20px 0 0 50px;
+  margin: 2rem 0 0 5rem;
 }
 
 .box-link img {
-  height: 40px;
-  width: 40px;
+  height: 4rem;
+  width: 4rem;
   position: relative;
 }
 
 .icon-merge {
   position: absolute;
-  left: 10px;
+  left: 1rem;
 }
 
 .icon-world {
   position: absolute;
-  left: 10px;
+  left: 1rem;
 }
 
 .box-link a {
-  padding: 10px 15px;
-  margin-left: 20px;
+  padding: 1rem 1.5rem;
+  margin-left: 2rem;
   color: #fff;
+  font-size: 1.5rem;
 }
 
 .btn-project {
   display: flex;
   justify-content: center;
   font-family: 'Lato', sans-serif;
-  border-radius: 25px;
+  border-radius: 2.5rem;
   border: none;
   text-decoration: none;
   text-transform: capitalize;
@@ -652,16 +674,14 @@ a:visited {
 }
 
 .project-illustration {
-  height: 300px;
-  width: 450px;
+  height: 30rem;
+  width: 45rem;
   flex-wrap: wrap;
-  background: red;
 }
 
 .project-illustration img {
   height: 100%;
   width: auto;
-  background :red;
 }
 
 /**********************************************
@@ -670,7 +690,7 @@ a:visited {
 
 .contact {
   display: flex;
-  height: 705px;
+  height: 70.5rem;
   max-width: 100%;
   margin: auto;
   flex-wrap: wrap;
@@ -683,7 +703,7 @@ a:visited {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 705px;
+  height: 70.5rem;
   max-width: 55%;
 }
 
@@ -691,38 +711,40 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 200px;
+  height: 20rem;
   max-width: 70%;
-  margin-top: 100px;
+  margin-top: 10rem;
 }
 
 .contact-header-title {
   text-align: center;
-  font-size: 27px;
+  font-size: 2.7rem;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .contact-header-intro {
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 25px;
   width: 100%;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
 }
 
 .contact-button {
-  width: 140px;
-  height: 40px;
+  width: 14rem;
+  height: 4rem;
 }
 
 .contact-button a {
-  padding: 20px;
+  padding: 2rem;
   text-transform: uppercase;
   text-decoration: none;
   color: #31859bff;
   background-color: white;
-  border: 2px solid #31859bff;
+  border: 0.2rem solid #31859bff;
+  border-radius: 3rem;
+  font-size: 1.5rem;
 }
 
 .contact-button a:hover {
@@ -738,13 +760,13 @@ a:visited {
 .contact-box {
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
-  height: 240px;
-  width: 300px;
+  margin-top: 5rem;
+  height: 24rem;
+  width: 30rem;
 }
 
 .contact-coordinates {
-  height: 50px;
+  height: 5rem;
   max-width: 100%;
   display: flex;
   align-items: center;
@@ -753,7 +775,8 @@ a:visited {
 
 .contact-coordinates h3 {
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
+  font-size: 2.5rem;
   color: #31859bff;
 }
 
@@ -761,52 +784,55 @@ a:visited {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 50px;
+  height: 5rem;
   position: relative;
 }
 
 .box-mail img {
   position: absolute;
-  top: 5px;
-  left: 10px;
-  height: 40px;
+  top: 0.5rem;
+  left: 1rem;
+  height: 4rem;
 }
 
 .box-mail p {
-  text-align: center;
+  width: 16rem;
+  font-size: 2rem;
 }
 
 .box-location {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 50px;
+  height: 5rem;
   position: relative;
 }
 
 .box-location img {
   position: absolute;
-  top: 5px;
-  left: 10px;
-  height: 40px;
+  top: 0.5rem;
+  left: 1rem;
+  height: 4rem;
 }
 
 .box-location p {
-  width: 160px;
+  width: 16rem;
+  font-size: 2rem;
 }
 
 .contact-illustration {
   position: relative;
-  height: 705.1px;
-  width: 685px;
+  height: 70.5rem;
+  width: 68.5rem;
   float: right;
 }
 
 .contact-illustration img {
   position: absolute;
-  width: 500px;
-  top: 185px;
-  left: 100px;
+  width: 50rem;
+  top: 18.5rem;
+  left: 10rem;
+  background: red;
 }
 
 /**********************************************
@@ -818,24 +844,28 @@ footer {
   justify-content: center;
   font-family: 'Lato', sans-serif;
   width: 100%;
-  padding: 15px;
+  padding: 1.1rem;
   background-color: #31859bff;
 }
 
 footer p {
   color: #fff;
+  font-size: 2rem;
 }
 
-/* TEST */
+/* TOP */
+.index img {
+  width: 4rem;
+}
 
 #btn-top {
   display: none;
   position: fixed;
-  bottom: 60px;
-  right: 20px;
-  font-size: 26px;
-  width: 50px;
-  height: 50px;
+  bottom: 6rem;
+  right: 2rem;
+  font-size: 2.6rem;
+  width: 5rem;
+  height: 5rem;
   cursor: pointer;
   outline: none;
   border: none;
