--- a/css/style.css
+++ b/css/style.css
@@ -13,24 +13,119 @@ body {
   height: 100vh;
 }
 
-.logo {
+/**********************************************
+            *** NAVIGATION ***
+**********************************************/
+
+#navigation {
+  position: fixed;
+  z-index: 40;
+  width: 100%;
+  background-color: #31859bff;
+  text-align: center;
+  height: 10rem;
+  transition: all 0.4s ease-in-out;
+}
+
+#navigation a {
+  text-decoration: none;
+  font-size: 3rem;
+  padding: 1rem 5rem;
+  line-height: 6.5rem;
+  font-family: 'Lato', sans-serif;
+  margin: auto;
+  color: #373737;
+}
+
+
+#navigation a:active {
+  font-size: 4rem;
+}
+
+.icon {
+display: none;
+}
+
+/* .logo {
   position: fixed;
   z-index: 100;
   margin: 1.6rem 4.6rem;
+  left: 11.5rem;
+  top: 1rem;
 }
-
 .logo img {
   position: absolute;
-  top: -1rem;
-  left: 4.5rem;
-  width: 8rem;
+  top: -1.5rem;
+  left: -1rem;
+  width: 9rem;
+} */
+/* #navigation {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  background: #31859bff;
+  text-align: center;
+  height: 10rem;
+  transition: all 0.4s ease-in-out;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.checked {
-  display: none;
+#navigation a {
+  text-decoration: none;
+  font-size: 2.5rem;
+  padding: 1rem 3rem;
+  line-height: 6.5rem;
+  font-family: 'Lato', sans-serif;
+  margin: 1rem 1rem;
+  color: #000;
+  position: relative;
+  background: transparent;
 }
 
-nav {
+#navigation  a:link,
+#navigation  a:visited {
+  padding-bottom: 0.5rem;
+  text-decoration: none;
+}
+
+#navigation a::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 5px;
+  width: 60%;
+  height: 1.5px;
+  opacity: 0;
+  background-color: #fff;
+  transform: translate(-50%, 0);
+  transition: all 0.3s ease-in-out;
+}
+
+#navigation a:hover::after {
+  width: 75%;
+  opacity: 1;
+}
+
+.border {
+  position: relative;
+}
+
+a:link,
+a:visited {
+  color: #9f9f9f;
+  -webkit-transition: background-color rgb(207, 204, 204) 0.2s, color 0.2s;
+  transition: background-color rgb(207, 204, 204) 4.2s, color 0.2s;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s, color 0.2s;
+} */
+/* #navigation a:active {
+  
+} */
+
+
+
+/* nav {
   position: fixed;
   width: 100%;
   line-height: 6rem;
@@ -68,9 +163,9 @@ nav ul li a {
 
 #menu li a {
   color: #000;
-}
+} */
 
-#menu li a:link,
+/* #menu li a:link,
 #menu li a:visited {
   padding-bottom: 0.5rem;
   text-decoration: none;
@@ -105,7 +200,7 @@ a:visited {
   transition: background-color rgb(207, 204, 204) 4.2s, color 0.2s;
   border-bottom: 2px solid transparent;
   transition: border-bottom 0.2s, color 0.2s;
-}
+} */
 
 .banner {
   background: #31859bff;
@@ -116,19 +211,20 @@ a:visited {
 
 .hero-text {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   z-index: 98;
-  max-width: 40%;
+  max-width: 100%;
   position: absolute;
-  top: 31%;
-  left: 10%;
+  top: 40%;
+  left: 13.5%;
+  margin: auto;
 }
 
 .hero-text h1 {
   font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size: 6.5rem;
+  font-weight: 700;
+  font-size: 8rem;
   text-align: center;
   line-height: 8rem;
   color: #fff;
@@ -136,10 +232,9 @@ a:visited {
 
 .hero-text h2 {
   font-family: 'Lato', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 6.5rem;
-
-  line-height: 8rem;
+  font-weight: 700;
   color: #fff;
 }
 
@@ -148,7 +243,7 @@ a:visited {
   cursor: pointer;
 }
 
-#icon{
+#icon-arrow{
   color: black;
     height: 7rem;
     width: 7rem;
@@ -167,7 +262,7 @@ a:visited {
     z-index: 96;
     animation: pulse 1.9s infinite;
 }
-.icon-arrow{
+.arrow{
   width: 4rem;
   height: 4rem;
 }
@@ -903,33 +998,6 @@ footer p {
   transition-property: background-color, color;
 }
 
-@media(max-width: 992px) {
-
-
-  #btn-top {
-    font-size: 22px;
-    width: 40px;
-    height: 40px;
-    bottom: 15px;
-    right: 15px;
-  }
-}
-
-@media(max-width:768px) {
-
-  .container {
-    padding: 10px 50px;
-  }
-
-  #btn-top {
-    font-size: 18px;
-    width: 32px;
-    height: 32px;
-    bottom: 6px;
-    right: 60px;
-  }
-}
-
 /**********************************************
             *** ANIMATES ***
 **********************************************/
@@ -1007,405 +1075,3 @@ footer p {
   }
 }
 
-@media (max-width: 425px) {
-
-  #menuToggle {
-    display: block;
-    position: relative;
-    top: 50px;
-    left: 50px;
-    z-index: 1;
-    -webkit-user-select: none;
-    user-select: none;
-  }
-
-  #menuToggle a {
-    text-decoration: none;
-    color: #232323;
-
-    transition: color 0.3s ease;
-  }
-
-  #menuToggle a:hover {
-    color: tomato;
-  }
-
-
-  #menuToggle input {
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 2;
-
-    -webkit-touch-callout: none;
-  }
-
-  #menuToggle span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    background: #ffffff;
-    border-radius: 3px;
-    z-index: 1;
-    transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-      opacity 0.55s ease;
-  }
-
-  #menuToggle span:first-child {
-    transform-origin: 0% 0%;
-  }
-
-  #menuToggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-  }
-
-  #menuToggle input:checked~span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
-  }
-
-  #menuToggle input:checked~span:nth-last-child(3) {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-
-  #menuToggle input:checked~span:nth-last-child(2) {
-    transform: rotate(-45deg) translate(0, -1px);
-  }
-
-  #menu {
-    position: absolute;
-    width: 320px;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
-    background: #ededed;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-  }
-
-  #menu li {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0px;
-    text-align: center;
-  }
-
-
-  #menuToggle input:checked~ul {
-    transform: none;
-  }
-
-  .logo {
-    height: 55px;
-    width: 55px;
-    top: 15px;
-    right: -20px;
-  }
-  .logo img {
-    position: absolute;
-    top: -5px;
-    left: -10px;
-  } 
-
-  .hero-text {
-    display: flex;
-    flex-direction: column;
-    max-width: 80%;
-    flex-wrap: wrap-reverse;
-    text-align: center;
-  }
-
-  .hero-text h1 {
-    font-size: 3.5em;
-    margin: auto;
-  }
-
-  .hero-text h2 {
-    font-size: 2em;
-    width: 70%;
-    margin: auto;
-    line-height: 1.4em;
-  }
-
-  .hero-text img {
-    width: 0.8em;
-  }
-
-  .about {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 100%;
-    max-height: 100%;
-    box-sizing: border-box;
-  }
-
-  .about-content {
-    margin: auto;
-    max-width: 100%;
-
-  }
-
-  .about-content h1 {
-    font-size: 2.1em;
-    width: 75%;
-
-  }
-
-  .about-content p {
-    font-size: 0.5em;
-    width: 100%;
-    margin: auto;
-  }
-
-  .box-social {
-    max-width: 100%;
-  }
-
-  .about-btn {
-    text-align: center;
-    padding: auto;
-    margin-top: 40px;
-  }
-
-  .about-illustration {
-    display: none;
-  }
-
-  /* Skill */
-  .skill {
-    flex-wrap: wrap;
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .skill-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    max-height: 100%;
-    flex-wrap: wrap;
-
-  }
-
-  .skill-box {
-    margin: auto;
-    max-width: 80%;
-    max-height: 100%;
-    margin-bottom: 30px;
-  }
-
-  .row,
-  .row2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-height: 51.9%;
-    max-width: 75%;
-    margin: auto;
-  }
-
-  .row2 {
-    margin-top: -25px;
-  }
-
-  .skill-front h3,
-  .skill-back h3,
-  .skill-framework h3,
-  .skill-tool h3 {
-    font-size: 1.3em;
-    width: 200%;
-    margin: auto;
-  }
-
-  .skill-front img,
-  .skill-back img {
-    width: 40%;
-  }
-
-  .skill-framework img {
-    width: 35%;
-  }
-
-  .skill-tool img {
-    width: 60%;
-  }
-
-  .skill-front p,
-  .skill-back p,
-  .skill-framework p,
-  .skill-tool p {
-    display: none;
-  }
-
-  .skill-illustration {
-    display: none;
-  }
-
-
-  /* Project */
-
-  .project {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 100%;
-    max-height: 100%;
-    box-sizing: border-box;
-  }
-
-  .project-box {
-    max-width: 100%;
-    max-height: 150%;
-  }
-
-  .project-portfolio {
-    max-width: 100%;
-    max-height: 150%;
-  }
-
-  .project-content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    max-width: 100%;
-    max-height: 150%;
-  }
-
-  .project-content h3 {
-    max-width: 100%;
-    margin: auto;
-    text-align: center;
-    font-size: 1.3em;
-  }
-
-  .project-content .desc {
-    max-width: 70%;
-    margin: auto;
-    font-size: 0.8em;
-  }
-
-  .box-stack {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    max-width: 20%;
-  }
-
-  .box-stack p {
-    padding: 5px;
-    font-size: 0.5em;
-  }
-
-  .box-link {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    margin: auto;
-    max-width: 35%;
-  }
-
-  .box-link img {
-    padding: 5px;
-  }
-
-  .icon-world {
-    margin-right: 30px;
-  }
-
-  .box-link a {
-    padding: -5px;
-    margin: auto;
-    text-align: center;
-    font-size: 0.5em;
-  }
-
-  .project-illustration {
-    display: none;
-  }
-
-  /* Contact */
-  .contact {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 100%;
-    max-height: 200%;
-    box-sizing: border-box;
-  }
-
-  .content-contact {
-    max-width: 100%;
-    max-height: 150%;
-  }
-
-  .contact-header {
-    max-width: 100%;
-    max-height: 80%;
-    display: flex;
-    justify-content: center;
-  }
-
-  .contact-header-title {
-    font-size: 1.1em;
-    max-width: 55%;
-  }
-
-  .contact-header-intro {
-    font-size: 1em;
-    max-width: 85%;
-    margin-top: 10px;
-    text-align: center;
-}
-
-  .contact-button {
-    margin-top: 20px;
-  }
-
-  .contact-button a {
-    padding: 10px;
-  }
-
-  .contact-illustration {
-    display: none;
-  }
-
-  .contact-box {
-    display: none;
-  }
-
-  .contact-coordinates {}
-
-  .contact-coordinates h3 {}
-
-  .index {
-    position: fixed;
-    right: -13.5px;
-    bottom: 54px;
-  }
-
-  .index img {
-    right: 5px;
-  }
-
-}
